<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailHistoryActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtInternetStatusDetailHistory"
        android:text="@string/no_int"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        android:textStyle="bold"
        android:background="@color/grey_3"
        android:backgroundTint="@color/grey_3"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtInternetStatusDetailHistory"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <ImageView
                android:id="@+id/histimgML"
                android:layout_width="345dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:src="@drawable/other" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_standard_new"
                android:layout_marginEnd="@dimen/spacing_standard_new"
                android:layout_marginBottom="@dimen/spacing_standard_new"
                android:background="@drawable/bg_rectangle_order"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="130dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat"
                    android:paddingStart="@dimen/spacing_standard_new"
                    android:paddingTop="@dimen/spacing_standard"
                    android:paddingEnd="@dimen/spacing_standard_new"
                    android:paddingBottom="@dimen/spacing_standard"
                    android:text="lbl_payment_details"
                    android:textColor="@color/textColorPrimary"
                    android:textStyle="bold" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_width"
                    android:background="@color/view_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_standard">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_standard"
                        android:layout_marginEnd="@dimen/spacing_standard"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/lbl_loca"
                            android:textColor="@color/colorPrimary_sec" />

                        <TextView
                            android:id="@+id/htextaddress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:fontFamily="@font/montserrat"
                             />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_standard"
                        android:layout_marginTop="@dimen/spacing_control"
                        android:layout_marginEnd="@dimen/spacing_standard"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/lbl_city"
                            android:textColor="@color/colorPrimary_sec" />

                        <TextView
                            android:id="@+id/htextlocality"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/spacing_control"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/ques"
                            android:textColor="@color/black" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_standard"
                        android:layout_marginTop="@dimen/spacing_standard"
                        android:layout_marginEnd="@dimen/spacing_standard"
                        android:layout_marginBottom="@dimen/spacing_control"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_marginTop="0dp"
                            android:fontFamily="@font/montserrat"
                            android:gravity="center_vertical"
                            android:text="@string/pincode"
                            android:textColor="@color/colorPrimary_sec" />

                        <TextView
                            android:id="@+id/htextcode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/spacing_control"
                            android:layout_marginTop="0dp"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/ques"
                            android:textColor="@color/black"
                            android:textSize="15dp"
                            tools:text="$50" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_standard"
                        android:layout_marginTop="@dimen/spacing_standard"
                        android:layout_marginEnd="@dimen/spacing_standard"
                        android:layout_marginBottom="@dimen/spacing_control"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_marginTop="0dp"
                            android:fontFamily="@font/montserrat"
                            android:gravity="center_vertical"
                            android:text="@string/lbl_div"
                            android:textColor="@color/colorPrimary_sec" />

                        <TextView
                            android:id="@+id/htextstate"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/spacing_control"
                            android:layout_marginTop="0dp"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/ques"
                            android:textColor="@color/black"
                            android:textSize="15dp"
                            tools:text="$50" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_standard"
                        android:layout_marginTop="@dimen/spacing_standard"
                        android:layout_marginEnd="@dimen/spacing_standard"
                        android:layout_marginBottom="@dimen/spacing_control"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_marginTop="0dp"
                            android:fontFamily="@font/montserrat"
                            android:gravity="center_vertical"
                            android:text="@string/dictrict"
                            android:textColor="@color/colorPrimary_sec" />

                        <TextView
                            android:id="@+id/htextdistrict"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/spacing_control"
                            android:layout_marginTop="0dp"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/ques"
                            android:textColor="@color/black"
                            android:textSize="15dp"
                            tools:text="$50" />

                    </LinearLayout>




                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_standard"
                        android:layout_marginTop="@dimen/spacing_standard"
                        android:layout_marginEnd="@dimen/spacing_standard"
                        android:layout_marginBottom="@dimen/spacing_control"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_marginTop="0dp"
                            android:fontFamily="@font/montserrat"
                            android:gravity="center_vertical"
                            android:text="@string/country"
                            android:textColor="@color/colorPrimary_sec" />

                        <TextView
                            android:id="@+id/htextcountry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/spacing_control"
                            android:layout_marginTop="0dp"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/ques"
                            android:textColor="@color/black"
                            android:textSize="15dp"
                            tools:text="$50" />

                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnmap"
                android:backgroundTint="@color/teal_700"
                android:text="@string/mapbtn"
                android:layout_gravity="center"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/imgPending"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_baseline_done_24"
                        android:background="@drawable/round_button_background" />

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/locbtn1"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textAlignment="center"/>
                    <TextView
                        android:id="@+id/historyupdate"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="Uploaded"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textAlignment="center"/>
                </LinearLayout>
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="------>"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/imgAck"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/round_button_background"
                        android:src="@drawable/ic_baseline_done_24" />

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/locbtn2"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textAlignment="center"/>
                    <TextView
                        android:id="@+id/historyAckDate"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text=" "
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textAlignment="center"/>
                </LinearLayout>
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="----->"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/imgSolved"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/round_button_background"
                        android:src="@drawable/ic_baseline_done_24" />

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/locbtn3"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textAlignment="center"/>
                    <TextView
                        android:id="@+id/historySolveDate"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text=" "
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textAlignment="center"/>
                </LinearLayout>
            </LinearLayout>








            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loctxt"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:textStyle="italic"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtviewdescription"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:text="@string/lbl_com"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                />




        </LinearLayout>

    </ScrollView>
</RelativeLayout>