<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtInternetStatusProfile"
                android:text="---No Internet Connection---"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp"
                android:textStyle="bold"
                android:background="@color/grey_3"
                android:backgroundTint="@color/grey_3"
              />

            <ImageView
                android:id="@+id/imgviewProfileImage"
                android:layout_width="270dp"
                android:layout_height="270dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/ic_baseline_person_24"
                android:adjustViewBounds="true"
                android:layout_below="@+id/txtInternetStatusProfile"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ProfileLinear"
                android:layout_below="@+id/imgviewProfileImage"
                android:layout_centerHorizontal="true"
                >

                <ImageButton
                    android:id="@+id/imgbtnProfileCamera"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="10dp"
                    android:adjustViewBounds="true"
                    android:backgroundTint="@color/white"
                    android:padding="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_baseline_photo_camera_24" />
                <ImageButton
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/imgbtnProfileGallery"
                    android:src="@drawable/ic_baseline_file_upload_24"
                    android:padding="10dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/white"
                    />



            </LinearLayout>

            <TextView
                android:id="@+id/txtProfileName"
                android:layout_width="391dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ProfileLinear"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@color/grey_3"
                android:padding="8dp"
                android:text="Name"
                android:textColor="@color/black"
                android:textIsSelectable="true"
                android:textSize="20dp" />

            <TextView
                android:layout_width="370dp"
                android:background="@color/grey_3"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtProfileName"
                android:id="@+id/txtProfileEmail"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:padding="8dp"
                android:text="Email"
                android:textIsSelectable="true"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtProfileEmail"
                android:background="@color/grey_3"
                android:id="@+id/txtProfilePhone"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:padding="8dp"
                android:text="Phone"
                android:textIsSelectable="true"
                android:textColor="@color/black"
                android:textSize="20dp"/>

            <EditText
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:background="@color/grey_3"
                android:layout_below="@+id/txtProfilePhone"
                android:id="@+id/edttxtProfileAddress"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:padding="8dp"
                android:hint="@string/address"
                android:inputType="textAutoComplete"
                android:textIsSelectable="true"
                android:textColor="@color/black"
                android:textSize="20dp"/>
            <EditText
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:background="@color/grey_3"
                android:layout_below="@+id/edttxtProfileAddress"
                android:id="@+id/edttxtProfileOccupation"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:padding="8dp"
                android:hint="@string/occ"
                android:inputType="textAutoCorrect"
                android:textIsSelectable="true"
                android:textColor="@color/black"
                android:textSize="20dp"/>


            <ProgressBar
                android:id="@+id/progressBarProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"
                android:backgroundTint="@color/teal_700"
                android:layout_below="@+id/edttxtProfileOccupation"/>


            <Button
                android:id="@+id/btnProfileUpdate"
                android:layout_width="wrap_content"
                android:layout_height="65dp"

                android:layout_below="@+id/progressBarProfile"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/teal_700"
                android:text="@string/update" />



        </RelativeLayout>

    </ScrollView>

</RelativeLayout>